--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,28 +1,27 @@
 .header {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	height: 56px;
-	padding: 0;
 	background: #673AB7;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 	z-index: 50;
 }
 
 .header h1 {
-	float: left;
-	margin: 0;
-	padding: 0 15px;
+	padding-left: 15px;
 	font-size: 24px;
 	line-height: 56px;
-	font-weight: 400;
+	font-weight: 800;
 	color: #FFF;
 }
 
 .header nav {
-	float: right;
+	display: flex;
+	align-items: center;
+	/* background: brown; */
 	font-size: 100%;
+	height: 100%;
 }
 
 .header nav a {
