--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,5 +1,5 @@
 .home {
-	padding: 56px 20px;
-	min-height: 100%;
-	width: 100%;
+	display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
