--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,6 +1,6 @@
 html, body {
-	height: 100%;
-	width: 100%;
+	/* height: 100%; */
+	/* width: 100%; */
 	padding: 0;
 	margin: 0;
 	background: #FAFAFA;
@@ -10,11 +10,18 @@ html, body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-
+ 
 * {
 	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-#app {
-	height: 100%;
+.app {
+	display:flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 100vh;
+	font-size: 16px;
+	min-height: 100vh;
 }
